# sem_iv_oop

./: .gitignore
lab1/: 2  CMakeLists.txt  Makefile  cmake_install.cmake  edge_loader.cpp  edge_loader.h  main.cpp
lab1/.cache/clangd/index/: RenderLog.cpp.5EE0BAD7BA917827.idx  RenderLog.cpp.DABB3FC44CB495C6.idx  RenderLog.hpp.137A08DDDDBD0C9A.idx  RenderLog.hpp.B3581128236617CD.idx  camera.cpp.286E96667AFED744.idx  camera.cpp.EAB62B91F8534349.idx  camera.hpp.82530A7AB2E9F700.idx  camera.hpp.D47A12D888C9304A.idx  cocoa_init.m.895ADBAB51B60F64.idx  cocoa_joystick.h.2BB00050C2FC8886.idx  cocoa_joystick.h.CBAE864C6378DC52.idx  cocoa_joystick.m.E31E0022EFEB2BA4.idx  cocoa_monitor.m.AC10A6C93B4CEF0E.idx  cocoa_platform.h.287E737604581946.idx  cocoa_platform.h.F7070485EB92EDED.idx  cocoa_time.c.5A1E3D77851937C9.idx  cocoa_window.m.CEC11BD924C298F8.idx  commands.h.C979FD4F78185D50.idx  context.c.B1749D2C72B9F012.idx  context.c.D2AC80E19472BFF8.idx  draw.h.CABBFCFAC238633E.idx  edge.cpp.669684766B14E7AA.idx  edge.cpp.DD20F43691BC9AB5.idx  edge.h.02335E6D5046CAEA.idx  edge.h.84F499CCDCAF3FF0.idx  edge_array.cpp.0BABDA655E28B72F.idx  edge_array.h.1976EEDFDB115891.idx  edge_array.h.717F120524B34820.idx  edge_loader.cpp.A1DBAFEB5290EA33.idx  edge_loader.h.8CB22C76676B42CF.idx  egl_context.c.A3F179F95B98C3D2.idx  egl_context.c.EF1B01459C44636C.idx  egl_context.h.327E18F3E7AA3AA4.idx  egl_context.h.DC1CE3FD8FE78448.idx  errors.cpp.70BE6D55A4C3C5B1.idx  errors.h.6E653CF9DBA2B3F2.idx  errors.h.9722D0035B227690.idx  errors.hpp.2627B87469898DA3.idx  errors.hpp.C48F22936F426086.idx  events.hpp.6BAD434AABC6EE22.idx  (+165 more)
lab1/display/: draw.cpp  draw.h
lab1/errors/: errors.cpp  errors.h
lab1/include/: RenderLog.hpp  camera.hpp  errors.hpp  events.hpp  gui.hpp  io.hpp  manager.hpp  model.hpp  model_loader.hpp  obj_loader.hpp  parse_funcs.hpp  render.hpp  shaders.hpp  tinyobj_loader_c.h  vectors.hpp  window.hpp
lab1/lab1.dSYM/Contents/Resources/DWARF/: lab1
lab1/manager/: commands.h  manager.cpp  manager.h
lab1/model/: model.cpp  model.h  model_loader.cpp  model_loader.h  model_transform.cpp  model_transform.h
lab1/shaders/: fs.glsl  model.glsl
lab1/src/: camera.cpp  errors.cpp  gui.cpp  io.cpp  main.cpp  manager.cpp  model.cpp  model_loader.cpp  render.cpp  shaders.cpp  vectors.cpp  window.cpp
lab1/tests/: test2.txt
lab1/ui/: imfilebrowser.h  mainwindow.cpp  mainwindow.h
lab1/utils/: my_string.cpp  my_string.h
lab1/vertex/: edge.cpp  edge.h  edge_array.cpp  edge_array.h  edge_loader.cpp  edge_loader.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_array_transform.cpp  vertex_array_transform.h  vertex_loader.cpp  vertex_loader.h  vertex_transform.cpp  vertex_transform.h
lab2/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  todo.md
lab2/Set/: base.h  compare.h  exceptions.h  node.h  node_implementation.hpp  nodeptr.h  set.h  set_implementation.hpp  set_iterator.h  set_iterator_implementaition.hpp  tree.h  tree_iterator.h
lab2/tests/: operators.hpp  wrap_tests.hpp
lab4/: CMakeLists.txt  main.cpp
lab4/elevator/: CMakeLists.txt
lab4/elevator/include/: consts.h  elevator.h
lab4/elevator/src/: constants.h
lab4/elevator/src/cabin/: cabin.cpp  cabin.h
lab4/elevator/src/consts/: consts.h
lab4/elevator/src/control_panel/: control_panel.cpp  control_panel.h
lab4/elevator/src/door/: door.cpp  door.h
lab4/elevator/src/elevator/: elevator.cpp  elevator.h
lab4/src/ui/: design.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab_3/: CMakeLists.txt  build.sh  engine.config  main.cpp  uml.xml
lab_3/engine/: CMakeLists.txt  error.h
lab_3/engine/builder/: camera_builder.cpp  camera_builder.h  model_builder.cpp  model_builder.h  scene_builder.cpp  scene_builder.h
lab_3/engine/commands/: base_command.h  camera_command.cpp  camera_command.h  model_command.cpp  model_command.h  scene_command.cpp  scene_command.h
lab_3/engine/config/: abstract_config.h  config_creator.cpp  config_creator.h  libconf_config.cpp  libconf_config.h
lab_3/engine/errors/: errors.h
lab_3/engine/facade/: facade.cpp  facade.h
lab_3/engine/load_controller/: abstract_load_controller.cpp  abstract_load_controller.h  model_load_controller.cpp  model_load_controller.h  model_load_controller_creator.cpp  scene_load_controller.cpp  scene_load_controller.h  scene_load_controller_creator.cpp  scene_load_controller_creator.h
lab_3/engine/loader/: base_camera_loader.h  base_loader.h  base_model_loader.h  base_scene_loader.h  file_camera_loader.cpp  file_camera_loader.h  file_model_loader.cpp  file_model_loader.h  file_scene_loader.cpp  file_scene_loader.h
lab_3/engine/managers/: base_manager.h  load_manager.cpp  load_manager_creator.cpp  load_manager_creator.h  render_manager.cpp  render_manager.h  render_manager_creator.cpp  render_manager_creator.h  scene_manager.cpp  scene_manager.h  scene_manager_creator.cpp  scene_manager_creator.h  transform_manager.cpp  transform_manager.h  transform_manager_creator.cpp  transform_manager_creator.h
lab_3/engine/objects/: matrix.cpp  matrix.h  object.h
lab_3/engine/objects/camera/: camera.cpp  camera.h
lab_3/engine/objects/composite/: composite.cpp  composite.h
lab_3/engine/objects/model/: edge.cpp  edge.h  mesh.cpp  mesh.h  model.cpp  model.h  polygon.cpp  polygon.h  vertex.cpp  vertex.h
lab_3/engine/renderer/: abstract_render_factory.h  abstract_renderer.h
lab_3/engine/scene/: scene.cpp  scene.h
lab_3/engine/spectator/: render_spectator.cpp  render_spectator.h  spectator.cpp  spectator.h  transformaion.cpp  transformaion.h
lab_3/qt/: design.h  mainwindow.cpp  mainwindow.h  qt_render.cpp  qt_render.h  qt_render_factory.cpp  qt_render_factory.h
lab_3/ui/: design.ui
